--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.13",
+    "numpy>=2.3.1",
+    "pandas>=2.3.0",
+    "pytest>=8.4.1",
     "uvicorn>=0.34.3",
 ]
